# visulate-for-oracle

./: .dockerignore  .gcloudignore  .gitignore  Dockerfile  LICENSE  README.md  a2as.yaml  app.js  build-and-push.sh  cloudbuild-component.yaml  cloudbuild.yaml  docker-compose.yaml  openapi.yaml  package-lock.json  package.json  run-all-tests.sh  start-local.sh  update_a2as.py
.github/: copilot-instructions.md
ai-agent/: .env.example  Dockerfile  README.md  mcp-test-client.py  pyproject.toml  sessions.db  start_agents.sh
ai-agent/app_developer/: agent.py  main.py
ai-agent/comment_generator/: agent.py  app.py  main.py
ai-agent/common/: config.py  context.py  credentials.py  service_template.py  tools.py  utils.py
ai-agent/erd_agent/: agent.py  diagram_generator.py  main.py
ai-agent/invalid_objects/: agent.py  main.py
ai-agent/nl2sql_agent/: agent.py  main.py
ai-agent/object_analysis_agent/: agent.py  main.py
ai-agent/root_agent/: agent.py  main.py  remote_tool.py
ai-agent/schema_analysis_agent/: agent.py  main.py
ai-agent/schema_comparison_agent/: agent.py  main.py
ai-agent/test_data_generator/: agent.py  generator.py  main.py
ai-agent/tests/: conftest.py  test_comment_generator.py  test_credentials.py  test_credentials_propagation.py  test_delegation.py  test_erd_agent.py  test_generator.py  test_invalid_objects_agent.py  test_root_agent.py  test_schema_analysis_agent.py  test_test_data_agent.py  test_utils.py
ai-agent/visulate_agent/: __init__.py  agent.py
api-server/: Dockerfile  app.js  openapi.yaml  package-lock.json  package.json
api-server/config/: database.js  db-constants.js  endpoints.json  http-server.js
api-server/database-setup/: README.md  (+3 more)
client/: package-lock.json  package.json
config/: database.js  http-server.js
docs/: CNAME  Gemfile  README.md  _config.yml  application-architecture.md  database-registration.md  database-setup.md  index.md  overview.md  quickstart.md
google-marketplace/: README.md  listing-text.txt  schema.yaml
k8s/: README.md  client-deployment.yaml  client-service.yaml  ingress-service.yaml  server-config-map.yaml  server-deployment.yaml  server-service.yaml
network_admin/: dbConfig.js
proxy-config/: Dockerfile  nginx.conf
query-engine/: Dockerfile  MANIFEST.in  README.md  SETUP.md  requirements.txt  setup.py  start.sh
services/: controller.js  database.js  http-server.js  logger.js  router.js  sql-statements.js  util.js
setup/: README.md  create_visulate_user.sql  drop_visulate_user.sql
src/: sql_statements.js
test/: testrunner.js
ui/: .browserslistrc  .eslintrc.js  .gitignore  Dockerfile  angular.json  karma.conf.js  package-lock.json  package.json  proxy.conf.json  tsconfig.app.json  tsconfig.json
visulate-for-oracle/: Chart.yaml  values.yaml
(+301 files in other folders)
